--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,11 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.short-logo{
+	display: none;
+}
+
 p {
 	margin-bottom: 0px;
 	font-size: 14px;
@@ -47,12 +52,12 @@ ul.social-icons li a {
 }
 
 ul.social-icons li a:hover {
-	background-color: #f33f3f;
+	background-color: #a38627;
 	color: #fff;
 }
 
 a.filled-button {
-	background-color: #f33f3f;
+	background-color: #a38627;
 	color: #fff;
 	font-size: 14px;
 	text-transform: capitalize;
@@ -90,7 +95,7 @@ a.filled-button:hover {
 }
 
 .page-heading .text-content h4 {
-	color: #f33f3f;
+	color: #a38627;
 	font-size: 22px;
 	text-transform: uppercase;
 	font-weight: 700;
@@ -106,7 +111,7 @@ a.filled-button:hover {
 
 #preloader {
   overflow: hidden;
-  background: #f33f3f;
+  background: #a38627;
   left: 0;
   right: 0;
   top: 0;
@@ -219,7 +224,7 @@ header .navbar {
 .background-header .navbar-nav .nav-link.active,
 .background-header .navbar-nav .nav-link.show,
 .background-header .navbar-nav .show>.nav-link {
-	color: #f33f3f!important;
+	color: #a38627!important;
 }
 .navbar .navbar-brand {
 	float: 	left;
@@ -238,7 +243,8 @@ header .navbar {
 }
 .navbar .navbar-brand h2 em {
 	font-style: normal;
-	color: #f33f3f;
+	font-size: xx-large;
+	color: #a38627;
 }
 #navbarResponsive {
 	z-index: 999;
@@ -265,7 +271,7 @@ header .navbar {
 .navbar .navbar-nav .show>.nav-link {
 	color: #fff;
 	padding-bottom: 25px;
-	border-bottom: 3px solid #f33f3f;
+	border-bottom: 3px solid #a38627;
 }
 .navbar .navbar-toggler-icon {
 	background-image: none;
@@ -282,7 +288,7 @@ header .navbar {
 }
 .navbar .navbar-toggler-icon:after {
 	content: '\f0c9';
-	color: #f33f3f;
+	color: #a38627;
 	font-size: 18px;
 	line-height: 26px;
 	font-family: 'FontAwesome';
@@ -334,7 +340,7 @@ header .navbar {
 }
 
 .banner .text-content h4 {
-	color: #f33f3f;
+	color: #a38627;
 	font-size: 22px;
 	text-transform: uppercase;
 	font-weight: 700;
@@ -394,7 +400,7 @@ header .navbar {
 	text-transform: uppercase;
 	font-size: 13px;
 	font-weight: 700;
-	color: #f33f3f;
+	color: #a38627;
 }
 
 .product-item {
@@ -437,7 +443,7 @@ header .navbar {
 }
 
 .product-item .down-content ul li i {
-	color: #f33f3f;
+	color: #a38627;
 	font-size: 14px;
 }
 
@@ -446,12 +452,12 @@ header .navbar {
 	right: 30px;
 	bottom: 30px;
 	font-size: 13px;
-	color: #f33f3f;
+	color: #a38627;
 	font-weight: 500;
 }
 
 .product-item .down-content span a {
-	color: #f33f3f;
+	color: #a38627;
 	display: inline-block;
 	margin-bottom: 3px;
 }
@@ -527,11 +533,11 @@ header .navbar {
 }
 
 .best-features ul.featured-list li a:hover {
-	color: #f33f3f;
+	color: #a38627;
 }
 
 .best-features ul.featured-list li a:hover::before {
-	background-color: #f33f3f;
+	background-color: #a38627;
 }
 
 .best-features .filled-button {
@@ -590,7 +596,7 @@ footer .inner-content p {
 }
 
 footer .inner-content p a {
-	color: #f33f3f;
+	color: #a38627;
 	margin-left: 3px;
 }
 
@@ -623,7 +629,7 @@ footer .inner-content p a {
 
 .products .filters ul li.active,
 .products .filters ul li:hover {
-  color: #f33f3f;
+  color: #a38627;
 }
 
 .dropdown-menu { 
@@ -674,8 +680,8 @@ footer .inner-content p a {
 
 .products ul.pages li a:hover,
 .products ul.pages li.active a {
-	background-color: #f33f3f;
-	border-color: #f33f3f;
+	background-color: #a38627;
+	border-color: #a38627;
 	color: #fff;
 }
 
@@ -729,7 +735,7 @@ footer .inner-content p a {
 
 .team-member .thumb-container .hover-effect .hover-content ul.social-icons li a:hover {
 	background-color: #fff;
-	color: #f33f3f;
+	color: #a38627;
 }
 
 .team-member:hover .hover-effect {
@@ -746,7 +752,7 @@ footer .inner-content p a {
 .team-member .down-content span {
 	display: block;
 	font-size: 13px;
-	color: #f33f3f;
+	color: #a38627;
 	font-weight: 500;
 	margin-bottom: 20px;
 }
@@ -784,7 +790,7 @@ footer .inner-content p a {
 	display: inline-block;
 	text-align: center;
 	line-height: 100px;
-	background-color: #f33f3f;
+	background-color: #a38627;
 	color: #fff;
 	font-size: 32px;
 }
@@ -825,7 +831,7 @@ footer .inner-content p a {
 }
 
 .owl-clients button.owl-dot.active { 
-	background: #f33f3f!important; 
+	background: #a38627!important; 
 }
 
 /* Clients */
@@ -919,7 +925,7 @@ footer .inner-content p a {
 }
 
 .contact-form button.filled-button {
-	background-color: #f33f3f;
+	background-color: #a38627;
 	color: #fff;
 	font-size: 14px;
 	text-transform: capitalize;
@@ -951,11 +957,11 @@ footer .inner-content p a {
 }
 
 .accordion a:hover {
-	color: #f33f3f!important;
+	color: #a38627!important;
 }
 
 .accordion a.active {
-  color: #f33f3f!important;
+  color: #a38627!important;
 }
 
 .accordion li .content {
@@ -990,6 +996,16 @@ footer .inner-content p a {
 
 
 /* Responsive Style */
+@media (max-width: 400px) {
+	.big-logo{
+		display: none;
+	}
+
+	.short-logo{
+		display: inline-block;
+	}
+}
+
 @media (max-width: 768px) {
 	.banner .text-content {
 		width: 90%;
@@ -1091,7 +1107,7 @@ footer .inner-content p a {
 	.navbar .navbar-nav .nav-link.active,
 	.navbar .navbar-nav .nav-link.show,
 	.navbar .navbar-nav .show>.nav-link {
-		color: #f33f3f!important;
+		color: #a38627!important;
 		border-bottom: none!important;
 		padding-bottom: 15px;
 	}
